<resources>
    <string name="app_name">ProMe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="no_nearby_device">No nearby device</string>
    <string name="available_places">Available Places</string>
    <string name="dashboard">Dashboard</string>
    <string name="promo_title">Promo Title</string>
    <string name="period">Period</string>
    <string name="submit">SUBMIT</string>
    <string name="category">Category</string>
    <string name="upload">Upload Promo Picture</string>
    <string name="tutorial">Tutorial</string>
    <string name="player_error">Unable to load video</string>

    <string-array name="category">
        <item>Food</item>
        <item>Fashion</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="promo">Promo</string>
</resources>
