<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tifaniwarnita.prome.AdminActivity">

    <ImageView
        android:id="@+id/prome_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:src="@drawable/tulisan_prome" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/dashboard"
        android:textColor="@android:color/white"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:theme="@style/FormInputLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_admin_promo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/promo_title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:theme="@style/FormInputLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_admin_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/period"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/category"
        android:textColor="@android:color/white"/>

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:entries="@array/category"
        android:theme="@style/mySpinnerItemStyle">

    </Spinner>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/upload"
            android:textColor="@android:color/white"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/logo_upload_picture"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@color/colorYellow"
        android:textColor="@android:color/white"/>

</LinearLayout>
